Added configuration profiles